# g2f-platform-harvester

./: README.md  pyproject.toml
.github/workflows/: daily_results_scrape.yml  daily_scrape.yml
apps/g2f_results_harvester/: results_main.py  results_scraper.py
apps/scraper_cloud/: TOKEN_CREATION.md  main.py  telegram.sh
libs/g2f_core/adapters/: gcs_storage.py  playwright_scraper.py  storage.py  storage_factory.py
libs/g2f_core/adapters/db/: base.py  repository.py  schema.py
libs/g2f_core/adapters/weather/: open_meteo_adapter.py
libs/g2f_core/domain/: models.py  ports.py  weather.py
libs/g2f_core/services/: bronze_to_silver.py  manifest.py
libs/g2f_core/services/acl/: bronze_result_adapter.py  bronze_v2_adapter.py  parse_html.py  parse_result_html.py
